fixed a possible deadlock in manipulating messages that are the results
of a search.

added a search in progress dialog so that you can see that something's
happening while waiting for search results.

added an attachment icon to the main folder/message table.

020810 release
--------------

NOTE:  i modified the local mail store (mbox) configuration a bit.  if you're
using any local mail folders, you may need to change the Mail Directory and
Inbox File settings.  your inbox is specified by Inbox File; subfolders are
stored in Mail Directory/folders.

pooka can now exit even if all the open stores aren't available.

made it so we don't do unnecessary redraws on the folder panel every time
a message changes or is loaded.

removed several excess communications with the mail store.

added a disconnected icon so that it looks different if you're browsing
messages in connected vs. disconnected imap.

added an icon for the root node in the folder tree.

updated the NewAccountPooka so that you can set a better variety of choices
during setup.

added ssl support for pop3 folders.

added Add buttons to many of the list choices in the configuration editors.
makes it a lot easier to add all of the items that you want in the correct
order.

made the VariableEditorPane change within the editor instead of 
popping up a new window.

made it so by default the ssl seeding is done with /dev/urandom instead of
using the very very slow seeding that SecureRandom uses.  this speeds
up initial ssl connections by a huge factor.

020703 release
--------------

fixed a bug which prevented you from deleting a message from a 
disconnected folder.

in preview pane mode, when you open up a folder, the keyboard focus now
shifts to the message table.

added a progress dialog to caching multiple messages during disconnected
operation.  

changed the sorting method on the message tables.  now clicking a column
a second time will reverse the sort on that column.  doing a shift+click